# koda

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: koda.toml
src-tauri/src/: lib.rs  main.rs  music_library.rs
src-tauri/src/cache/: cover_art.rs  mod.rs  waveform.rs
src-tauri/src/database/: mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/database/repository/: albums.rs  artists.rs  genres.rs  helpers.rs  mod.rs  stats.rs  tracks.rs
src-tauri/src/music_player/: commands.rs  mod.rs  player.rs  state.rs
src-tauri/src/settings/: api.rs  cache.rs  database.rs  mod.rs  scanner.rs  waveform.rs
src-tauri/src/sources/: itunes.rs  lrclib.rs  metadata.rs  mod.rs  musicbrainz.rs  utils.rs
src-tauri/src/waveform/: commands.rs  generator.rs  mod.rs  models.rs
src/lib/components/: Album.svelte  Artists.svelte  ConfirmDialog.svelte  ContextMenu.svelte  CoverArt.svelte  ScrollingText.svelte  TitleBar.svelte  Tooltip.svelte
src/lib/components/MusicPlayer/: Controls.svelte  LyricsView.svelte  MusicPlayer.svelte  PlayPauseButton.svelte  PlayerCoverArt.svelte  ShuffleControl.svelte  TrackInfo.svelte  Volume.svelte
src/lib/components/Settings/: SettingsModal.svelte
src/lib/components/Settings/views/: GeneralSettings.svelte  MonochromeSettings.svelte  ThirdPartySettings.svelte
src/lib/components/Waveform/: FallbackSeekbar.svelte  LoadingState.svelte  WaveformSeekbar.svelte  WaveformVisualization.svelte  useWaveformLoader.svelte.ts
src/lib/constants/: sortOptions.ts
src/lib/services/: monochrome.ts
src/lib/state/: confirm_dialog.svelte.ts  context_menu.svelte.ts  download.svelte.ts  library.svelte.ts  lyrics.svelte.ts  playback.svelte.ts  player.svelte.ts  queue.svelte.ts  settings.svelte.ts
src/lib/types/: audio.ts  entity.ts  index.ts  library.ts
src/lib/utils/: color.ts  format.ts  split_artists.ts  tauri.ts  trackState.ts  virtualize.svelte.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
