[package]
name = "koda"
version = "0.1.0"
description = "Music player"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rodio = "0.21.1"
lofty = "0.23.2"
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = "0.4"

base64 = "0.22.1"
image = "0.25.9"
tokio = { version = "1.49", features = ["sync", "rt-multi-thread"] }
sha2 = "0.10.9"

symphonia = { version = "0.5.5", features = ["all"] }
rayon = "1.11"
