[package]
name = "koda"
version = "0.9.2"
description = "Music player"
authors = ["snnrve"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rodio = "0.21.1"
lofty = "0.23.2"
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = "0.4"

base64 = "0.22.1"
image = "0.25.9"
tokio = { version = "1.49", features = ["sync", "rt-multi-thread", "time"] }
sha2 = "0.10.9"

symphonia = { version = "0.5.5", features = ["all"] }
rayon = "1.11"
musicbrainz_rs = { version = "0.12", features = ["async"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
lazy_static = "1.5.0"
scopeguard = "1.2.0"
urlencoding = "2.1.3"
regex = "1.12.3"
mimalloc = "0.1.43"
tauri-plugin-dialog = "2"
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io", "codec"] }

[profile.release]
lto = true
panic = "abort"
opt-level = "s" # Optimize for size
codegen-units = 1
